--- a/README.org
+++ b/README.org
@@ -12,15 +12,40 @@
 
 * Install
 
-With =npm= or =pnpm=:
+Voraussetzungen:
+- Node.js (LTS empfohlen) und npm
+- Optional: Python 3 (für den lokalen Webserver)
+
+Empfohlener, plattformübergreifender Weg (Windows/macOS/Linux):
 
 #+begin_src sh
-npm install -g esbuild
 npm install
-./build.sh
+npm run build
 #+end_src
 
-Run ~python3 -m http.server 8000~, then visit http://localhost:8000/embed.html in your browser.
+Starten (lokaler Server auf Port 8000):
+
+#+begin_src sh
+npm run start
+#+end_src
+
+Danach im Browser öffnen: http://localhost:8000/
+Hinweis: Die Startseite leitet automatisch nach embed.html weiter.
+
+Windows (PowerShell) – Option ohne npm-Skripte (optional):
+
+#+begin_src powershell
+New-Item -ItemType Directory -Path build -Force | Out-Null
+npx esbuild --bundle generate-points-file.ts --platform=node --format=esm --external:fs --outfile=build/_generate-points-file.js
+node build/_generate-points-file.js
+npx esbuild --analyze --bundle mapgen4.ts --minify --sourcemap --outfile=build/_bundle.js
+npx esbuild --bundle worker.ts --sourcemap --minify --outfile=build/_worker.js
+python -m http.server 8000
+#+end_src
+
+Troubleshooting (Windows):
+- Wenn npx/esbuild nicht gefunden wird: Installiere Node.js neu oder führe vorher npm install aus.
+- Alternativ kannst du Git Bash oder WSL verwenden und ./build.sh ausführen.
 
 * Background
 
